--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
    <footer >
     <div class="footer fixed-bottom">
      
-        <span className="text-muted">@2020  Ayush Ghimire</span>
+        <span className="text-muted">@2020  Hritik Neupane</span>
     </div>
      
     </footer>
